--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -1,4 +1,17 @@
 html{
  font-family: Verdana;
  background-color: black;
+ text-align: center;
+}
+h1, h2, h3, h4, h5{
+ color: white;
+}
+.camp img{
+  width: 100%;
+}
+footer{
+  text-align: right;
+}
+a{
+  color: aqua;
 }
